k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postic-ml
  labels:
    name: postic-ml
    purpose: ai-social-media-management
